--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Hais <haisdeaks@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "async": "^2.6.0",
+    "cheerio": "^1.0.0-rc.2",
     "hubot": "^2.19.0",
     "hubot-business-cat": "^1.5.14",
     "hubot-diagnostics": "0.0.2",
@@ -23,7 +25,8 @@
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.4.0",
-    "hubot-voting": "^1.1.0"
+    "hubot-voting": "^1.1.0",
+    "moment": "^2.22.1"
   },
   "engines": {
     "node": "0.10.x"
